k8s/2048-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gametest
  namespace: 2048-game
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-devops
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
      - path: /portfolio/*
        pathType: Prefix
        backend:
          service:
            name: harsh-nodeport-service
            port:
              number: 80
